--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ko">
 <head>    
     <title>Binance Realtime Funding Rate</title>
+    <meta name="description" content="Binance Realtime Funding Rate">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-    <link rel="stylesheet" href="./style.css?<?php echo time();?>" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <div class="container">
@@ -31,6 +32,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-    <script src="./script.js?<?php echo time();?>"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
